crates/uitest/fixtures/parser/block.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/block.fe
---
error[1-0001]: unexpected syntax while parsing block
  ┌─ block.fe:3:16
  │
3 │     let x: i32 u32 = 10
  │                ^^^^^^^^ unexpected


